UtahLiveDataTest/src/objects/BuildUpItem__c.object
<CustomObject>
    <description>List of child records that add up to a Budget Category</description>
    <fields>
        <fullName>AllowableDirect__c</fullName>
        <description>Federally Approved Direct</description>
        <inlineHelpText>Federally Approved Direct</inlineHelpText>
        <label>Allowable Direct</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AmendmentRequestBudgetCategory__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Amendment Request Budget Category</label>
        <referenceTo>AmendmentRequestBudgetCategory__c</referenceTo>
        <relationshipLabel>BuildUpItems</relationshipLabel>
        <relationshipName>BuildUpItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ApplicationBudgetCategory__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Application Budget Category</description>
        <label>Application Budget Category</label>
        <referenceTo>ApplicationBudgetCategory2__c</referenceTo>
        <relationshipLabel>BuildUpItems</relationshipLabel>
        <relationshipName>BuildUpItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ApplicationStatus__c</fullName>
        <formula>IF( ISPICKVAL(ApplicationBudgetCategory__r.Application__r.Status__c, &quot;Converted to Grant&quot;), TRUE, FALSE)</formula>
        <label>Application Status</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Asset__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Asset</label>
        <referenceTo>Asset__c</referenceTo>
        <relationshipLabel>BuildUpItems</relationshipLabel>
        <relationshipName>BuildUpItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AwardBudgetCategory__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Award Budget Category</label>
        <referenceTo>AwardBudgetCategory__c</referenceTo>
        <relationshipLabel>BuildUpItems</relationshipLabel>
        <relationshipName>BuildUpItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Benefit__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Benefit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>BuildupTypeUSBE__c</fullName>
        <label>BuildupTypeUSBECTE</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Property and Equipment</fullName>
                </value>
                <value>
                    <fullName>Admin Cost</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CFRate__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CFTotalHours__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Total Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CSCType__c</fullName>
        <label>Type of Consultant Services or Contracts</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ChangeType__c</fullName>
        <label>TYPE OF CHANGE</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
                <value>
                    <fullName>D</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ContractedFees__c</fullName>
        <formula>CFTotalHours__c * CFRate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contracted Fees</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CostFundedByVAWA__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Cost Funded By VAWA</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CurrentActiveAwardBudgetBuildup__c</fullName>
        <label>CurrentActiveAwardBudgetBuildup</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Created</fullName>
                    <default>true</default>
                    <label>Created</label>
                </value>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Revised</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EndDate__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EquipmentCost__c</fullName>
        <formula>IF(OR(ApplicationBudgetCategory__r.BudgetCategory__r.RowNumber__c == &apos;570&apos;, AwardBudgetCategory__r.BudgetCategory__r.RowNumber__c == &apos;570&apos;, AmendmentRequestBudgetCategory__r.AwardBudgetCategory__r.BudgetCategory__r.RowNumber__c == &apos;570&apos;), EquipmentQuantity__c * EquipmentUnitPrice__c, EquipmentVAWAUse__c * EquipmentQuantity__c * EquipmentUnitPrice__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Equipment Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EquipmentDesc__c</fullName>
        <label>Item Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EquipmentQuantity__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EquipmentTypeDesc__c</fullName>
        <label>EquipmentTypeDesc</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EquipmentUnitPrice__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Unit Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EquipmentVAWAUse__c</fullName>
        <label>% VAWA Use</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ExpensesPerPerson__c</fullName>
        <formula>(PerDiem__c + HotelFees__c) * NumberofDays__c + RegistrationPerPerson__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Expenses per person</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FBTotalSalary__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>FBTotalSalary</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GrandTotal__c</fullName>
        <formula>TotalDirect__c + TotalIndirect__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GranteeAmount__c</fullName>
        <formula>GrandTotal__c * GranteeShare__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Grantee Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GranteeShare__c</fullName>
        <formula>(100-(GrantorShare__c*100))/100</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Grantee Share</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>GrantorAmount__c</fullName>
        <formula>GrandTotal__c * GrantorShare__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Grantor Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GrantorShare__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Grantor Share (%) for each line item</description>
        <label>Grantor Share</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>HideAmendmentEditDelete__c</fullName>
        <formula>AmendmentRequestBudgetCategory__r.AmendmentRequest__r.HideEditDelete__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HideAmendmentEditDelete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HideApplicationEditDelete__c</fullName>
        <formula>NOT(OR(ISPICKVAL(ApplicationBudgetCategory__r.Application__r.Status__c, &apos;Created&apos;), ISPICKVAL(ApplicationBudgetCategory__r.Application__r.Status__c, &apos;Internally Reviewed&apos;),ISPICKVAL(ApplicationBudgetCategory__r.Application__r.Status__c, &apos;Reviewed&apos;),ISPICKVAL(ApplicationBudgetCategory__r.Application__r.Status__c,&apos;Revision Initiated&apos;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HideApplicationEditDelete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HideEditBtn__c</fullName>
        <description>Logic for Hiding Edit Button</description>
        <formula>OR(AND(AmendmentRequestBudgetCategory__c!=null,AmendmentRequestBudgetCategory__r.AmendmentRequest__r.HideEditDelete__c),
   AND(	ApplicationBudgetCategory__c!=null,NOT(OR(ISPICKVAL(ApplicationBudgetCategory__r.Application__r.Status__c, &apos;Created&apos;), ISPICKVAL(ApplicationBudgetCategory__r.Application__r.Status__c, &apos;Internally Reviewed&apos;),ISPICKVAL(ApplicationBudgetCategory__r.Application__r.Status__c, &apos;Reviewed&apos;),NOT(AND(ApplicationBudgetCategory__r.Application__r.ExternalApplicantStatus__c = &apos;Submitted to Grantor&apos;,NOT(ISPICKVAL(ApplicationBudgetCategory__r.Application__r.ChangeRequestStatus__c, &apos;Revision Request Assigned&apos;))))))),
  AND(AwardBudgetCategory__c!=null,AwardBudgetCategory__r.Award__r.HideNewBtn__c),
  AND(PaymentBudgetCategory__c!=null,Text( PaymentBudgetCategory__r.PaymentRequest__r.Status__c )!=&apos;Created&apos;)
  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Logic for Hiding Edit Button</inlineHelpText>
        <label>Hide Edit Btn</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HideEditandDelete__c</fullName>
        <formula>AwardBudgetCategory__r.Award__r.HideNewBtn__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HideEditandDelete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HidePaymentBuildup__c</fullName>
        <formula>text( PaymentBudgetCategory__r.PaymentRequest__r.Status__c )!=&apos;Created&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HidePaymentBuildup</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HotelFees__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Hotel Fees (Per Person/Per Day)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>HourlyRate__c</fullName>
        <label>Hourly Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Indirect__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Indirect %</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LineItemNo__c</fullName>
        <label>Line Item No</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ListBenefitType__c</fullName>
        <label>ListBenefitType</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MatchType__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Federal</fullName>
                    <default>true</default>
                    <label>Federal</label>
                </value>
                <value>
                    <fullName>In-Kind</fullName>
                </value>
                <value>
                    <fullName>Cash</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Narrative__c</fullName>
        <label>Narrative</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>NumberAttending__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Number attending</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NumberofDays__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Number of Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OtherCharges__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Other Charges ($)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PaymentBudgetCategory__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Payment Budget Category</label>
        <referenceTo>PaymentBudgetCategory__c</referenceTo>
        <relationshipLabel>BuildUpItems</relationshipLabel>
        <relationshipName>BuildUpItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PerDiem__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Per Diem</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PreApplicationBudgetCategory__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>PreApplicationBudgetCategory</description>
        <inlineHelpText>PreApplicationBudgetCategory</inlineHelpText>
        <label>PreApplication Budget Category</label>
        <referenceTo>PreApplicationBudgetCategory__c</referenceTo>
        <relationshipLabel>BuildUpItems</relationshipLabel>
        <relationshipName>BuildUpItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ProgramYearPurchased__c</fullName>
        <label>Program Year Purchased</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RegistrationPerPerson__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Registration (Per Person)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>RequestedHours__c</fullName>
        <label>Requested VAWA Funded Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Resource__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Resource</label>
        <referenceTo>Resource__c</referenceTo>
        <relationshipLabel>BuildUpItems</relationshipLabel>
        <relationshipName>BuildUpItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SourceType__c</fullName>
        <label>Source Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Federal</fullName>
                </value>
                <value>
                    <fullName>State</fullName>
                </value>
                <value>
                    <fullName>Local</fullName>
                </value>
                <value>
                    <fullName>Private</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>StartDate__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SubTotal__c</fullName>
        <formula>Quantity__c  *  UnitPrice__c</formula>
        <label>Sub Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SupplyCost__c</fullName>
        <formula>EquipmentQuantity__c * EquipmentUnitPrice__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TotalBenefitCost__c</fullName>
        <formula>TotalSalary__c * Benefit__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TotalBenefitCost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TotalCost__c</fullName>
        <formula>ExpensesPerPerson__c * NumberAttending__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TotalCostofEquipment__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Total Cost of Equipment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TotalDirect__c</fullName>
        <formula>(SubTotal__c  +  OtherCharges__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Direct</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TotalFBCost__c</fullName>
        <formula>FBTotalSalary__c * Benefit__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TotalFBCost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TotalHours__c</fullName>
        <label>Total # of Agency Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TotalIndirect__c</fullName>
        <formula>AllowableDirect__c *  Indirect__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Indirect</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TotalSalary__c</fullName>
        <formula>RequestedHours__c * HourlyRate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Salary</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TravelCost__c</fullName>
        <formula>TravelTotalMiles__c * TravelMileRate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Travel Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TravelDestination__c</fullName>
        <label>Travel Destination</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TravelMileRate__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>TravelMileRate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TravelPurpose__c</fullName>
        <label>Purpose</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TravelTotalMiles__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Total Miles (round trip)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>TEXT(ApplicationBudgetCategory__r.BudgetCategory__r.Type__c)</description>
        <formula>IF(ApplicationBudgetCategory__c!=null,TEXT(ApplicationBudgetCategory__r.BudgetCategory__r.Type__c),IF(AmendmentRequestBudgetCategory__c!=null,TEXT(AmendmentRequestBudgetCategory__r.BudgetCategory__r.Type__c),Null))</formula>
        <label>Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UnitPrice__c</fullName>
        <label>Unit Price</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UnitofMeasurement__c</fullName>
        <label>Measurement</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Boxes</fullName>
                </value>
                <value>
                    <fullName>Feet</fullName>
                </value>
                <value>
                    <fullName>Gallons</fullName>
                </value>
                <value>
                    <fullName>Hours</fullName>
                </value>
                <value>
                    <fullName>Minutes</fullName>
                </value>
                <value>
                    <fullName>Months</fullName>
                </value>
                <value>
                    <fullName>Numbers</fullName>
                </value>
                <value>
                    <fullName>Pounds</fullName>
                </value>
                <value>
                    <fullName>Trips</fullName>
                </value>
                <value>
                    <fullName>Years</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>BuildUp Item</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Item-{000}</displayFormat>
        <label>Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>BuildUpItems</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Allowable_Direct_Validation</fullName>
        <active>true</active>
        <description>Allowable Direct can not be greater than Total Direct</description>
        <errorConditionFormula>AllowableDirect__c&gt;TotalDirect__c</errorConditionFormula>
        <errorMessage>Federally Approved Direct can not be greater than Total Direct</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>EndDateGreaterThanStartDate</fullName>
        <active>true</active>
        <description>End Date Greater than Start Date</description>
        <errorConditionFormula>EndDate__c  &lt;  StartDate__c</errorConditionFormula>
        <errorMessage>End Date should be Greater than Start Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>End_Date_Less_than_BP_End_Date</fullName>
        <active>false</active>
        <description>End date should be earlier than application period end date</description>
        <errorConditionFormula>EndDate__c &gt; ApplicationBudgetCategory__r.BudgetPeriod__r.BudgetEndDate__c</errorConditionFormula>
        <errorMessage>End date should be earlier than application period end date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Grantor_Share_Validation</fullName>
        <active>true</active>
        <description>Grantor Share can not be greater than 100%</description>
        <errorConditionFormula>OR(GrantorShare__c &gt; 1,GrantorShare__c &lt; 0)</errorConditionFormula>
        <errorMessage>Grantor Share can be between 0-100%</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Start_Date_Greater_Than_BP_Start_Date</fullName>
        <active>false</active>
        <description>Start date should be later than application budget period date.</description>
        <errorConditionFormula>StartDate__c &lt; ApplicationBudgetCategory__r.BudgetPeriod__r.BudgetStartDate__c</errorConditionFormula>
        <errorMessage>Start date should be later than application budget period date.</errorMessage>
    </validationRules>
</CustomObject>